jilles      2006/10/21 23:32:38 UTC	(20061021-6825)
  Log:
  Use fault_noprivs instead of fault_authfail in some
  cases where no password or other authentication token
  is involved.
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/ghost.c (File Modified) 
  +2 -2		trunk/modules/nickserv/listchans.c (File Modified) 
  +1 -1		trunk/modules/nickserv/logout.c (File Modified) 
  +3 -3		trunk/modules/nickserv/set.c (File Modified) 


w00t        2006/10/21 22:43:43 UTC	(20061021-6823)
  Log:
  Fix a minor oops, thanks, jilles

  Changes:	Modified:
  +1 -1		trunk/protocol/inspircd11.c (File Modified) 


w00t        2006/10/21 22:30:12 UTC	(20061021-6821)
  Log:
  Simplified FJOIN processing and commented it.

  Changes:	Modified:
  +36 -7	trunk/protocol/inspircd11.c (File Modified) 


jilles      2006/10/21 21:24:10 UTC	(20061021-6819)
  Log:
  Do /stats f a little differently to avoid disclosing
  IPs over IRC and using connection_list outside connection.c.
  This uses a callback similar to the one for /stats B.
  

  Changes:	Modified:
  +46 -0	trunk/libatheme/connection.c (File Modified) 
  +1 -0		trunk/libatheme/connection.h (File Modified) 
  +7 -7		trunk/src/ptasks.c (File Modified) 


nenolod     2006/10/21 20:43:28 UTC	(20061021-6817)
  Log:
  - actually store the connection name in the memory we have alloted for it
  - list connections on /stats [fF]
  

  Changes:	Modified:
  +5 -2		trunk/libatheme/connection.c (File Modified) 
  +14 -0	trunk/src/ptasks.c (File Modified) 


jilles      2006/10/21 20:37:21 UTC	(20061021-6815)
  Log:
  nickserv/chanserv status:
  - don't crash if called from non-IRC
  - show if the user is recognized via access list (but
    not logged in to that nick)
  

  Changes:	Modified:
  +11 -2	trunk/modules/chanserv/status.c (File Modified) 
  +11 -2	trunk/modules/nickserv/status.c (File Modified) 


jilles      2006/10/21 20:18:14 UTC	(20061021-6813)
  Log: